--- a/src/app/components/home/home.html
+++ b/src/app/components/home/home.html
@@ -31,6 +31,11 @@
         <i class="fas fa-music-slash fa-3x text-muted mb-3"></i>
         <h3 class="text-light">Aún no hay música sonando</h3>
         <p class="text-muted">¡Busca y añade canciones a la lista para empezar la fiesta!</p>
+        <!-- Botón de Actualización Manual -->
+      <button class="btn btn-secondary mt-3" (click)="forceUpdate()">
+        <i class="fas fa-sync-alt"></i>
+        {{ isUpdating ? 'Actualizando...' : 'Actualizar' }}
+      </button>
       </div>
     </div>
   </ng-template>
