--- a/src/app/app.html
+++ b/src/app/app.html
@@ -1,7 +1,10 @@
 <div class="main-container">
   <header class="main-header">
     <div class="container d-flex justify-content-between align-items-center">
-      <h1 class="logo">{{ title }}</h1>
+      <div class="logo-container">
+        <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/1/19/Spotify_logo_without_text.svg/2048px-Spotify_logo_without_text.svg.png" alt="Spotify Logo" class="logo">
+        <h1 class="app-title">{{ title }}</h1>
+      </div>
       <nav class="main-nav">
         <a routerLink="/" routerLinkActive="active" [routerLinkActiveOptions]="{ exact: true }">Inicio</a>
         <a routerLink="/admin-login" routerLinkActive="active">Admin</a>
