--- a/src/app/app.scss
+++ b/src/app/app.scss
@@ -13,10 +13,22 @@
   z-index: 10;
 }
 
+.logo-container {
+  display: flex;
+  align-items: center;
+}
+
 .logo {
+  width: 40px;
+  height: 40px;
+  margin-right: 1rem;
+}
+
+.app-title {
   font-size: 1.5rem;
   font-weight: 700;
   color: var(--text-primary);
+  margin: 0;
 }
 
 .main-nav a {
@@ -39,10 +51,13 @@
 
 .now-playing-bar {
   grid-row: 3;
-  background-color: var(--card-bg);
-  padding: 1rem;
-  border-top: 1px solid var(--hover-bg);
+  background-color: #282828;
+  padding: 0.5rem 1rem;
+  border-top: 1px solid #121212;
   color: var(--text-primary);
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 /* Media queries para responsividad */
@@ -52,6 +67,11 @@
   }
 
   .logo {
+    width: 30px;
+    height: 30px;
+  }
+
+  .app-title {
     font-size: 1.2rem;
   }
 
