anuncio de disculpas y footer

--- a/src/app/app.html
+++ b/src/app/app.html
@@ -20,5 +20,19 @@
 </div>
 
 <footer class="now-playing-bar">
-  <!-- Aquí irá el componente de reproducción de música -->
+  <div class="footer-content text-center">
+    <p class="footer-text mb-0">Desarrollado por una sola persona:</p>
+    <p class="footer-text mb-1">Estudiante de Ingeniería de Sistemas - UPTC Sogamoso 2025-II</p>
+    <div class="social-links">
+      <a href="https://github.com/SebastianVega4" target="_blank">
+        <i class="fab fa-github me-1"></i>GitHub
+      </a>
+      <a href="https://www.linkedin.com/in/johan-sebastian-vega-ruiz-b1292011b/" target="_blank">
+        <i class="fab fa-linkedin me-1"></i>LinkedIn
+      </a>
+      <a href="https://www.instagram.com/sebastian.vegar/" target="_blank">
+        <i class="fab fa-instagram me-1"></i>Instagram
+      </a>
+    </div>
+  </div>
 </footer>
