--- a/src/app/components/home/home.html
+++ b/src/app/components/home/home.html
@@ -1,4 +1,6 @@
 <div class="home-container">
+  <!-- Mensaje de anuncio -->
+  <app-announcement></app-announcement>
   <!-- Sección de canción en reproducción -->
   <div class="now-playing-section compact-card fade-in" *ngIf="adminCurrentlyPlaying; else noSongPlaying">
     <div class="album-art-container">
