--- a/src/app/components/voting-list/voting-list.html
+++ b/src/app/components/voting-list/voting-list.html
@@ -1,9 +1,11 @@
 <div class="spotify-container">
   <div class="header">
     <h1>Votación de Canciones</h1>
-    <button class="btn-refresh" (click)="forceRefresh()" [disabled]="isRefreshing">
+    <button class="btn-refresh" (click)="forceRefresh()" [disabled]="isRefreshing || countdown > 0">
       <i class="fas fa-sync-alt" [class.fa-spin]="isRefreshing"></i>
-      {{ isRefreshing ? 'Actualizando...' : 'Actualizar' }}
+      <span *ngIf="!isRefreshing && countdown === 0">Actualizar</span>
+      <span *ngIf="isRefreshing">Actualizando...</span>
+      <span *ngIf="!isRefreshing && countdown > 0">Espera {{ countdown }}s</span>
     </button>
   </div>
 
